[project]
name = "imageoptimize"
version = "1.0.0"
description = "A Python tool that can upload batches of PNG and JPG files to the tinypng server for compression. It then downloads these compressed images and replaces the original ones. Finally, the compressed images are marked to prevent repeated handling.A python tool that can upload PNG and JPG files to the tinypng server in batches for compression, download these compressed images and replace the original ones. At last, the compressed images will be marked to avoid being handled repeatedly."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "piexif>=1.1.3",
    "requests>=2.32.5",
    "standard-imghdr>=3.13.0",
    "threadpool>=1.3.2",
]
